# Intelligent-Tax-Filing-Web-App

./: README.md
backend/: README.md  main.py  pyproject.toml
docker/: README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
frontend/: README.md
frontend/src/: App.jsx  styles.css
frontend/src/components/: ResultCard.jsx  TaxForm.jsx
